# air-quality-plataform-dagster-pipeline

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: warehouse.duckdb
data/bronze/measurements/dt=2026-01-01/: measurements.json
data/bronze/measurements/dt=2026-01-10/: measurements.json
data/ge/great_expectations/: great_expectations.yml
data/ge/great_expectations/expectations/: .ge_store_backend_id
data/ge/great_expectations/expectations/silver/: measurements.json
data/ge/great_expectations/validation_definitions/: validate_silver_measurements_daily.json
data/ge/results/silver_measurements/dt=2026-01-01/: validation_result.json
data/ge/results/silver_measurements/dt=2026-01-10/: validation_result.json
data/silver/measurements/dt=2026-01-01/: measurements.parquet
data/silver/measurements/dt=2026-01-10/: measurements.parquet
orchestrator/dagster_project/: definitions.py  resources.py
orchestrator/dagster_project/assets/: bronze_assets.py  gold_scorecard_assets.py  quality_assets.py  silver_assets.py  warehouse_refresh.py
orchestrator/dagster_project/contracts/: silver_contracts.py
orchestrator/dagster_project/gold/: scorecard_builder.py
orchestrator/dagster_project/io/: local_storage_client.py  storage_client.py
orchestrator/dagster_project/quality/: ge_asset.py  ge_batch_definition.py  ge_bootstrap.py  ge_datasource.py  ge_runner.py  ge_setup.py  ge_suites.py  ge_validation_definition.py
orchestrator/dagster_project/warehouse/: duckdb_warehouse.py
scripts/: create_duckdb_tables.py  update_duckdb_views.py
(+2 files in other folders)
